# bench

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
src/bench/cli/: __init__.py  discuss.py  init.py  map.py  populate.py  source.py  status.py  task.py  workbench.py
src/bench/model/: __init__.py  config.py  context.py  discuss.py  git.py  mode.py  opencode.py  source.py  task.py  workbench.py
src/bench/repository/: __init__.py  filesystem.py  git.py  opencode.py
src/bench/service/: __init__.py  _validation.py  discuss.py  git.py  init.py  map.py  mode_detection.py  opencode.py  populate.py  source.py  task.py  workbench.py
src/bench/view/: __init__.py  discuss.py  init.py  map.py  populate.py  source.py  status.py  task.py  workbench.py
