[project]
name = "bench"
version = "0.2.0"
description = "A CLI tool for managing development workbenches and worktrees"
readme = "README.md"
requires-python = "~=3.14.0"

dependencies = [
    "typer",
    "rich",
    "pyyaml",
    "pydantic",
]

[project.scripts]
bench = 'bench.cli:app'

[dependency-groups]
dev = [
    "ruff==0.15.0",
    "ty==0.0.15",
]
